--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="tv_register_nickname">请输入2至22位的昵称</string>
     <string name="tv_register_send_vcode">发送验证码</string>
     <string name="tv_register_input_vcode">请输入收到的验证码</string>
-    <string name="tv_register_input_psd">请设置6位及以上的密码</string>
+    <string name="tv_register_input_psd">请设置密码</string>
     <string name="tv_register_input_invited">请输入邀请码</string>
     <string name="tv_register_user_agreement">我已阅读并同意《用户协议》</string>
     <string name="register_input_phone">请输入手机号码</string>
@@ -138,7 +138,7 @@
     <string name="pay_self">余额支付</string>
     <string name="goods_price">商品价格</string>
     <string name="use_integral">(剩余积分</string>
-    <string name="uses_integral">所需积分</string>
+    <string name="uses_integral">使用积分</string>
     <string name="postage">邮费</string>
     <string name="total_payable">应付总额</string>
     <string name="getpay">提交订单</string>
@@ -187,6 +187,8 @@
 
     <string name="you">有</string>
     <string name="wu">无</string>
+
+    <string name="price">￥</string>
 
 
     <item name="tag_key_data" type="id"/>
