--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,6 +92,13 @@
 
     <string name="sure">确定</string>
 
+
+    <!--搜索-->
+    <string name="search_hint">抢大额神券</string>
+    <string name="search_history">搜索历史</string>
+    <string name="search_recommond">推荐搜索</string>
+    <string name="search_all_mall">全部商城</string>
+
     <!--我的-->
     <string name="me_balance">余额</string>
     <string name="me_integral">积分</string>
