--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="tv_register_input_vcode">请输入收到的验证码</string>
     <string name="tv_register_input_psd">请设置密码</string>
     <string name="tv_register_input_invited">请输入邀请码</string>
-    <string name="tv_register_user_agreement">我已阅读并同意《用户协议》</string>
+    <string name="tv_register_user_agreement">我已阅读并同意</string>
     <string name="register_input_phone">请输入手机号码</string>
 
     <string name="tv_login_please">请登录</string>
@@ -339,5 +339,40 @@
     <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
 
     <string name="wallet_balance">余额:</string>
+
+    <string name="user_agreement">
+    \t\t1、服务条款的确认和接纳\n
+    壕省钱app的各项内容和服务的所有权归绿之韵健康科技发展有限公司拥有。用户在接受本服务之前，请务必仔细阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。\n
+    2、用户同意：\n
+    (1) 提供及时、详尽及准确的个人资料。\n
+    (2) 不断更新注册资料、符合及时、详尽、准确的要求。 如果用户提供的资料不准确，本网站有结束服务的权利。 壕省钱app将不公开用户的姓名、地址、电子邮箱、帐号和电话号码等信息（请阅隐私保护条款）。\n
+    用户在壕省钱app的任何行为必须遵循：\n
+    (1) 传输资料时必须符合中国有关法规。\n
+    (2) 使用信息服务不作非法用途和不道德行为。\n
+    (3) 不干扰或混乱网络服务。\n
+    (4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。\n
+    \t\t3、服务条款的修改\n 
+    \t壕省钱app有权在必要时修改条款，将会在页面公布。 如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视为接受服务条款的变动。\n
+    4、 用户的帐号、密码和安全性\n
+    一旦成功注册成为会员，您将有一个密码和用户名。 用户将对用户名和密码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责。您可以随时改变您的密码。 用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本公司。\n
+    5、拒绝提供担保用户明确同意使用本公司服务，由用户个人承担风险。 壕省钱app不担保服务一定满足用户的要求，也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。 用户理解并接受：任何通过服务取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。 \n
+    6、有限责任壕省钱app对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。 这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。 \n
+    7、对用户信息的存储和限制壕省钱app不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。\n
+     8、结束服务壕省钱app可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。 同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：\n 
+    \t(1) 不再使用本公司的服务。\n 
+    \t(2) 通知本公司停止对该用户的服务。\n
+     9、信息内容的所有权本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。 用户只能在授权下才能使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n
+    \t\t10、隐私保护条款 \n
+    \t\t壕省钱app将严格保守用户的个人隐私，承诺未经过您的同意不将您的个人信息任意披露。 但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：\n
+    (1)在获取明确同意的情况下共享：获得您的明确同意后，我们会与其他方共享您的个人信息。\n
+    (2)我们可能会根据法律法规规定，或按政府主管部门的强制性要求，对外共享您的个人信息。\n
+    (3)与我们的关联公司共享：您的个人信息可能会与我们关联公司共享。我们只会共享必要的个人信息，且受本隐私政策中所声明目的的约束。关联公司如要改变个人信息的处理目的，将再次征求您的授权同意。\n
+    (4)与授权合作伙伴共享：仅为实现本隐私权政策中声明的目的，我们的某些服务将由授权合作伙伴提供。我们可能会与合作伙伴共享您的某些个人信息，以提供更好的客户服务和用户体验。例如，我们聘请来提供第三方数据统计和分析服务的公司可能需要采集和访问个人数据以进行数据统计和分析。在这种情况下，这些公司 必须遵守我们的数据隐私和安全要求。我们仅会出于合法、正当、必要、特定、明确的目的共享您的个人信息，并且只会共享提供服务所必要的个人信息。 对我们与之共享个人信息的公司、组织和个人，我们会与其签署严格的保密协定，要求他们按照我们的说明、本隐私政策以及其他任何相关的保密和安全措施来处理个人信息。
+我们不会将您的个人信息转让给任何公司、组织和个人，但以下情况除外：\n
+    \t\t(1)在获取明确同意的情况下转让：获得您的明确同意后，我们会向其他方转让您的个人信息\n
+    \t\t(2)在涉及合并、收购或破产清算时，如涉及到个人信息转让，我们会在要求新的持有您个人信息的公司、组织继续受此隐私政策的约束，否则我们将要求该公司、组织重新向您征求授权同意。
+我们仅会在以下情况下，公开披露您的个人信息：\n
+    \t\t(1)获得您明确同意后；\n
+    \t\t(2)基于法律的披露：在法律、法律程序、诉讼或政府主管部门强制性要求的情况下，我们可能会公开披露您的个人信息。\n</string>
 
 </resources>
