--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -114,6 +114,7 @@
     <string name="me_problem">常见问题</string>
     <string name="me_opinion">意见反馈</string>
     <string name="me_customer_service">客服热线</string>
+    <string name="me_privacy">隐私</string>
     <string name="me_about">关于我们</string>
     <string name="me_search_all">查看全部</string>
     <string name="me_fans">我的粉丝</string>
@@ -374,5 +375,18 @@
 我们仅会在以下情况下，公开披露您的个人信息：\n
     \t\t(1)获得您明确同意后；\n
     \t\t(2)基于法律的披露：在法律、法律程序、诉讼或政府主管部门强制性要求的情况下，我们可能会公开披露您的个人信息。\n</string>
+
+    <string name="welcome_message">欢迎来到壕省钱。\n
+        (1)在获取明确同意的情况下共享：获得您的明确同意后，我们会与其他方共享您的个人信息。\n
+        (2)我们可能会根据法律法规规定，或按政府主管部门的强制性要求，对外共享您的个人信息。\n
+        (3)与我们的关联公司共享：您的个人信息可能会与我们关联公司共享。我们只会共享必要的个人信息，且受本隐私政策中所声明目的的约束。关联公司如要改变个人信息的处理目的，将再次征求您的授权同意。\n
+        (4)与授权合作伙伴共享：仅为实现本隐私权政策中声明的目的，
+        我们的某些服务将由授权合作伙伴提供。我们可能会与合作伙伴共享您的某些个人信息，以提供更好的客户服务和用户体验。
+        例如，我们聘请来提供第三方数据统计和分析服务的公司可能需要采集和访问个人数据以进行数据统计和分析。
+        在这种情况下，这些公司 必须遵守我们的数据隐私和安全要求。我们仅会出于合法、正当、必要、特定、明确的目的共享您的个人信息，并且只会共享提供服务所必要的个人信息。 对我们与之共享个人信息的公司、组织和个人，我们会与其签署严格的保密协定，要求他们按照我们的说明、本隐私政策以及其他任何相关的保密和安全措施来处理个人信息。
+我们不会将您的个人信息转让给任何公司、组织和个人。
+    </string>
+
+    <string name="user_welcome">请您阅读完整版</string>
 
 </resources>
